<resources>
    <string name="driving_mode_answer">@string/incoming_answer</string>
    <string name="driving_mode_reject">@string/incoming_reject</string>
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency dialler</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="anonymous">anonymous</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response. Timed out</string>
    <string name="callFailed_server_unreachable">Unable to reach server</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect user name or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error occurred. Try later</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control</string>
    <string name="callFailed_cdma_notEmergency">Emergency calls only</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running...</string>
    <string name="cancel">Cancel</string>
    <string name="enter_input">Input Required. Try again!!</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_str">"Sending Tones
"</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="modify_call_prompt_yes">Yes</string>
    <string name="modify_call_prompt_no">No</string>
    <string name="modify_call_failure_str">"Modify Call request failed
"</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number on SIM card</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking…</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="label_nsdp">PIN to unlock SIM Network Subset</string>
    <string name="label_spdp">PIN to unlock SIM service provider</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock…</string>
    <string name="requesting_ns_unlock">Requesting to unlock network subset…</string>
    <string name="requesting_sp_unlock">Requesting to unlock SIM service provider…</string>
    <string name="unlock_failed">Network unlock request unsuccessful</string>
    <string name="ns_unlock_failed">Unable to unlock Netwrok Subset</string>
    <string name="sp_unlock_failed">Unable to unlock SIM service provider</string>
    <string name="unlock_success">Network unlock successful</string>
    <string name="ns_unlock_success">Network subset unlocked</string>
    <string name="sp_unlock_success">SIM service provider unlocked</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCF_summary">Select when to forward incoming calls</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding to %s</string>
    <string name="sum_cfu_enabled_no_number">Phone number not available</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to %s</string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="disable_cfb_forbidden">Unable to deactivate call diverting when busy. Unsupported by operator</string>
    <string name="disable_cfb_forbidden_can">Unable to deactivate call forwarding when busy</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to %s</string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="disable_cfnry_forbidden">Unable to deactivate call diverting for unanswered calls. Unsupported by operator</string>
    <string name="disable_cfnry_forbidden_can">Unable to deactivate call forwarding for unanswered calls</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to %s</string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="disable_cfnrc_forbidden">Unable to deactivate call diverting when phone is unreachable. Unsupported by operator</string>
    <string name="disable_cfnrc_forbidden_can">Unable to deactivate call forwarding when phone is unreachable</string>
    <string name="updating_title">Call settings</string>
    <string name="error_updating_title">Error</string>
    <string name="fdn">Fixed Dialling Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialling Numbers</string>
    <string name="onscreenShowDialpadText">Keypad</string>
    <string name="onscreenSpeakerText">Speaker</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="description_image_button_one">One</string>
    <string name="description_image_button_two">Two</string>
    <string name="description_image_button_three">Three</string>
    <string name="description_image_button_four">Four</string>
    <string name="description_image_button_five">Five</string>
    <string name="description_image_button_six">Six</string>
    <string name="description_image_button_seven">Seven</string>
    <string name="description_image_button_eight">Eight</string>
    <string name="description_image_button_nine">Nine</string>
    <string name="description_image_button_star">Star</string>
    <string name="description_image_button_zero">Zero</string>
    <string name="description_image_button_pound">Pound</string>
    <string name="webex">WebEx</string>
    <string name="end_call">End call</string>
    <string name="headset">Headset</string>
    <string name="swap">Swap</string>
    <string name="merge">Merge</string>
    <string name="callsettings_answering_key_title">The home key answers calls</string>
    <string name="callsettings_answering_key_summary">Press the home key to accept incoming calls</string>
    <string name="callsettings_PowerkeyEndsCalls_title">The power key ends calls</string>
    <string name="callsettings_PowerkeyEndsCalls_summary">Press the power key to end calls when screen is on. This will not turn off screen</string>
    <string name="callsettings_voice_cmd_title">Voice control</string>
    <string name="callsettings_voice_cmd_summary">Answer calls with voice commands</string>
    <string name="callsettings_answering_accessibility_tapping_title">Answer calls by tapping</string>
    <string name="callsettings_answering_accessibility_tapping_summary">Accept incoming calls by tapping the accept call button on the incoming call screen</string>
    <string name="callsettings_answering_accessibility_headtracking_title">Answers calls using head tracking</string>
    <string name="callsettings_answering_accessibility_headtracking_summary">Accept incoming calls by tracking the head movement</string>
    <string name="callsettings_answering_call_in_external_screen_title">Answer/end a calls using the outer screen</string>
    <string name="callsettings_answering_call_in_external_screen_summary">Answer/end calls without opening the device by using the outer screen.</string>
    <string name="callsettings_areacode_title">Auto area code</string>
    <string name="callsettings_areacode_summary_off">Automatically add area code to number display panel</string>
    <string name="callsettings_autoredial_title">Auto redial</string>
    <string name="callsettings_autoredial_summary">Enable auto redial if call is unable to connect or cut off</string>
    <string name="callsettings_subaddress_title">Subaddress</string>
    <string name="callsettings_subaddress_summary">Enable subaddress using asterisk character in number</string>
    <string name="callsettings_call_barring">Call barring</string>
    <string name="contacts">Contacts</string>
    <string name="extra_vol_title">"Extra
volume"</string>
    <string name="record">Record</string>
    <string name="loading">Loading...</string>
    <string name="callsettings_open_folder_title">Open folder to answer</string>
    <string name="callsettings_open_folder_summary">Answer calls by opening folder</string>
</resources>