<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:touchwiz="http://schemas.android.com/apk/res/touchwiz">
    <CheckBoxPreference android:title="@string/callsettings_answering_call_in_external_screen_title" android:key="callsettings_answering_in_external_screen_preference" android:summary="@string/callsettings_answering_call_in_external_screen_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" />
    <CheckBoxPreference android:title="@string/callsettings_answering_key_title" android:key="anykey_mode_preference" android:summary="@string/callsettings_answering_key_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" />
    <CheckBoxPreference android:title="@string/callsettings_answering_accessibility_tapping_title" android:key="callsettings_answering_accessibility_tapping" android:summary="@string/callsettings_answering_accessibility_tapping_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" />
    <CheckBoxPreference android:title="@string/callsettings_voice_cmd_title" android:key="voice_cmd_preference" android:summary="@string/callsettings_voice_cmd_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" />
    <CheckBoxPreference android:title="@string/callsettings_answering_accessibility_headtracking_title" android:key="callsettings_answering_accessibility_headtracking" android:summary="@string/callsettings_answering_accessibility_headtracking_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" />
    <CheckBoxPreference android:title="@string/callsettings_open_folder_title" android:key="folder_mode_preference" android:summary="@string/callsettings_open_folder_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" />
    <com.android.phone.callsettings.PowerKeyEndPreference android:title="@string/callsettings_PowerkeyEndsCalls_title" android:key="powerkey_end_preference" android:summary="@string/callsettings_PowerkeyEndsCalls_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" />
</PreferenceScreen>