<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_gravity="center_horizontal" android:id="@id/dialpad" android:layout_width="fill_parent" android:layout_height="315.0dip" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow android:layout_height="0.0px" android:layout_weight="1.0" android:splitMotionEvents="false">
        <ImageButton android:id="@id/one" android:layout_marginRight="9.0dip" android:src="@drawable/call_keypad_m_01" android:contentDescription="@string/description_image_button_one" style="@style/MwDialpadButtonStyle" />
        <ImageButton android:id="@id/two" android:layout_marginRight="9.0dip" android:src="@drawable/call_keypad_m_02" android:contentDescription="@string/description_image_button_two" style="@style/MwDialpadButtonStyle" />
        <ImageButton android:id="@id/three" android:src="@drawable/call_keypad_m_03" android:contentDescription="@string/description_image_button_three" style="@style/MwDialpadButtonStyle" />
    </TableRow>
    <TableRow android:layout_height="0.0px" android:layout_marginTop="9.0dip" android:layout_weight="1.0" android:splitMotionEvents="false">
        <ImageButton android:id="@id/four" android:layout_marginRight="9.0dip" android:src="@drawable/call_keypad_m_04" android:contentDescription="@string/description_image_button_four" style="@style/MwDialpadButtonStyle" />
        <ImageButton android:id="@id/five" android:layout_marginRight="9.0dip" android:src="@drawable/call_keypad_m_05" android:contentDescription="@string/description_image_button_five" style="@style/MwDialpadButtonStyle" />
        <ImageButton android:id="@id/six" android:src="@drawable/call_keypad_m_06" android:contentDescription="@string/description_image_button_six" style="@style/MwDialpadButtonStyle" />
    </TableRow>
    <TableRow android:layout_height="0.0px" android:layout_marginTop="9.0dip" android:layout_weight="1.0" android:splitMotionEvents="false">
        <ImageButton android:id="@id/seven" android:layout_marginRight="9.0dip" android:src="@drawable/call_keypad_m_07" android:contentDescription="@string/description_image_button_seven" style="@style/MwDialpadButtonStyle" />
        <ImageButton android:id="@id/eight" android:layout_marginRight="9.0dip" android:src="@drawable/call_keypad_m_08" android:contentDescription="@string/description_image_button_eight" style="@style/MwDialpadButtonStyle" />
        <ImageButton android:id="@id/nine" android:src="@drawable/call_keypad_m_09" android:contentDescription="@string/description_image_button_nine" style="@style/MwDialpadButtonStyle" />
    </TableRow>
    <TableRow android:layout_height="0.0px" android:layout_marginTop="9.0dip" android:layout_weight="1.0" android:splitMotionEvents="false">
        <ImageButton android:id="@id/star" android:layout_marginRight="9.0dip" android:src="@drawable/call_keypad_star" android:contentDescription="@string/description_image_button_star" style="@style/MwDialpadButtonStyle" />
        <ImageButton android:id="@id/zero" android:layout_marginRight="9.0dip" android:src="@drawable/call_keypad_m_00" android:contentDescription="@string/description_image_button_zero" style="@style/MwDialpadButtonStyle" />
        <ImageButton android:id="@id/pound" android:src="@drawable/call_keypad_shap" android:contentDescription="@string/description_image_button_pound" style="@style/MwDialpadButtonStyle" />
    </TableRow>
</TableLayout>