<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/inCallButtons" android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/inCallScreenButtonsContainer" android:paddingLeft="13.0dip" android:paddingRight="13.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:splitMotionEvents="false">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="89.0dip" android:splitMotionEvents="false">
            <FrameLayout android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginRight="7.0dip" android:layout_weight="1.0">
                <Button android:id="@id/addButton" android:visibility="gone" android:text="@string/onscreenAddCallText" android:drawableTop="@drawable/incall_button_add_icon" style="@style/MwInCallTouchUpperButton" />
                <Button android:id="@id/webexButton" android:visibility="gone" android:text="@string/webex" android:drawableTop="@drawable/call_webex_call_icon" style="@style/MwInCallTouchUpperButton" />
                <Button android:id="@id/mergeButton" android:visibility="gone" android:text="@string/merge" android:drawableTop="@drawable/incall_button_merge_icon" style="@style/MwInCallTouchUpperButton" />
                <Button android:id="@id/cdmaSwapButton" android:visibility="gone" android:text="@string/swap" android:drawableTop="@drawable/incall_button_swap_icon" style="@style/MwInCallTouchUpperButton" />
                <Button android:id="@id/recordButton" android:visibility="gone" android:text="@string/record" android:drawableTop="@drawable/incall_button_record_on_icon" style="@style/MwInCallTouchUpperButton" />
            </FrameLayout>
            <Button android:id="@id/dialpadButton" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginRight="7.0dip" android:text="@string/onscreenShowDialpadText" android:drawableTop="@drawable/incall_button_dialpad_icon" android:layout_weight="1.0" style="@style/MwInCallTouchUpperButton" />
            <FrameLayout android:layout_width="1.0dip" android:layout_height="89.0dip" android:layout_weight="1.0">
                <Button android:id="@id/endButton" android:background="@drawable/red_button" android:text="@string/end_call" android:drawableTop="@drawable/APKTOOL_DUMMY_0184" style="@style/MwInCallTouchUpperButton" />
                <Button android:id="@id/cancelButton" android:background="@drawable/red_button" android:visibility="gone" android:text="@string/end_call" android:drawableTop="@drawable/APKTOOL_DUMMY_0184" style="@style/MwInCallTouchUpperButton" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="82.0dip" android:layout_marginTop="7.0dip" android:splitMotionEvents="false">
            <ToggleButton android:id="@id/speakerButton" android:layout_marginRight="7.0dip" android:textOn="@string/onscreenSpeakerText" android:textOff="@string/onscreenSpeakerText" style="@style/MwInCallTouchToggleButtonNoFrame" />
            <Button android:id="@id/contactButton" android:layout_width="1.0dip" android:layout_marginRight="7.0dip" android:text="@string/contacts" android:drawableTop="@drawable/incall_button_contact_icon" android:layout_weight="1.0" style="@style/MwInCallTouchUpperButton" />
            <View android:id="@id/extraVolumeButtonParent" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <ToggleButton android:id="@id/extraVolumeButton" android:paddingTop="1.0dip" android:visibility="gone" android:layout_marginRight="7.0dip" android:textOn="@string/extra_vol_title" android:textOff="@string/extra_vol_title" android:maxLines="2" android:singleLine="false" style="@style/MwInCallTouchToggleButtonNoFrame" />
            <ToggleButton android:id="@id/muteButton" android:layout_marginRight="7.0dip" android:textOn="@string/onscreenMuteText" android:textOff="@string/onscreenMuteText" style="@style/MwInCallTouchToggleButtonNoFrame" />
            <ToggleButton android:id="@id/bluetoothButton" android:textOn="@string/headset" android:textOff="@string/headset" style="@style/MwInCallTouchToggleButtonNoFrame" />
        </LinearLayout>
    </LinearLayout>
    <ImageButton android:id="@id/volume_button" android:background="@drawable/call_volume_button_bg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mw_volume_button_layout_margin_left" android:layout_marginTop="@dimen/mw_volume_button_layout_margin_top" android:src="@drawable/call_btn_volume_on" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/volume_panel_layout" android:background="@drawable/call_volume_bg" android:visibility="gone" android:layout_width="@dimen/mw_volume_panel_layout_width" android:layout_height="@dimen/mw_volume_panel_layout_height" android:layout_marginLeft="@dimen/mw_volume_button_layout_margin_left" android:layout_marginTop="6.0dip" android:layout_below="@id/volume_button">
        <com.sec.android.touchwiz.widget.TwSeekBar android:id="@id/volume_seekbar" android:paddingTop="@dimen/mw_volume_seekbar_padding_value" android:paddingBottom="@dimen/mw_volume_seekbar_padding_value" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" style="@style/volume_seekbar" />
    </LinearLayout>
</RelativeLayout>